# tgfeed

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
tg-feed/: __main__.py  config.py  scheme.py  utils.py
tgfeed/: __main__.py  config.py  message.py  scheme.py  utils.py  validate.py
