[tool.poetry]
name = "tgfeed"
version = "0.0.24"
description = "Create feeds in Telegram easily"
authors = ["Nikolai <magnickolas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Telethon = "^1.27.0"
appdirs = "^1.4.4"
loguru = "^0.6.0"
jsonpickle = "^3.0.1"

[tool.poetry.dev-dependencies]
mypy = "^1.0.1"
pre-commit = "^3.1.1"
removestar = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
