[tool.poetry]
name = "tgfeed"
version = "0.0.25"
description = "Create feeds in Telegram easily"
authors = ["Nikolai <magnickolas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Telethon = "~1.36.0"
appdirs = "^1.4.4"
loguru = "~0.7.2"
jsonpickle = "~3.2.1"

[tool.poetry.dev-dependencies]
mypy = "^1.10.0"
pre-commit = "^3.7.1"
removestar = "^1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
