[project]
name = "tgfeed"
version = "0.1.1"
description = "Create feeds in Telegram easily"
authors = [
    {name = "Nikolai", email = "magnickolas@gmail.com"},
]
requires-python = "<4.0,>=3.9"

dependencies = [
    "Telethon~=1.40.0",
    "appdirs<2.0.0,>=1.4.4",
    "loguru<0.8.0,>=0.7.3",
    "jsonpickle<5.0.0,>=4.1.1",
]

[dependency-groups]
dev = [
    "mypy<2.0.0,>=1.17.1",
    "pre-commit<5.0.0,>=4.2.0",
    "removestar<2.0,>=1.5.2",
]
